--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -198,6 +198,15 @@
                 <category android:name="com.xylon.settings.SHORTCUT" />
               </intent-filter>
         </activity>
+        <activity
+            android:name=".fragments.RibbonTargets"
+            android:label="@string/title_ribbon" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.xylon.settings.SHORTCUT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activities.RamBar" />
         <activity
  	    android:name=".ShareToClipboard"
